# rsh_c

./: CMakeLists.txt  CommandManager.cpp  CommandManager.h  CommunicationManager.cpp  CommunicationManager.h  INIReader.cpp  INIReader.h  README.md  TelemetryManager.cpp  TelemetryManager.h  UDPVideoStreamer.cpp  UDPVideoStreamer.h  config.ini  main.cpp
Events/: EventManager.h
Src/Addons/: BaseAddon.cpp  BaseAddon.h
Src/Addons/json/: webcam_commands.json
Src/Communications/: ICommunication.h  SerialCommunication.cpp  SerialCommunication.h  TCPServer.cpp  TCPServer.h  UDPServer.cpp  UDPServer.h
Src/Modules/: AddonsManager.cpp  AddonsManager.h  BaseAddon.cpp  BaseAddon.h  BaseCamera.cpp  BaseCamera.h  CommandManager.cpp  CommandManager.h  CommunicationManager.cpp  CommunicationManager.h  TelemetryManager.cpp  TelemetryManager.h  UDPVideoStreamer.cpp  UDPVideoStreamer.h
install/include/mavsdk/mavlink/common/: common.h  mavlink.h
install/include/mavsdk/mavlink/minimal/: mavlink.h  minimal.h
install/include/mavsdk/mavlink/standard/: mavlink.h  standard.h
install/lib/cmake/MAVSDK/: MAVSDKConfig.cmake  MAVSDKTargets-debug.cmake  MAVSDKTargets.cmake
install/lib/pkgconfig/: mavsdk.pc
